--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "rehype-format": "^3.0.0",
-    "rehype-stringify": "^7.0.0",
+    "rehype-stringify": "^8.0.0",
     "remark-cli": "^8.0.0",
     "remark-parse": "^8.0.0",
     "remark-preset-wooorm": "^7.0.0",
@@ -43,10 +43,10 @@
     "to-vfile": "^6.0.0",
     "unified": "^9.0.0",
     "unist-builder": "^2.0.0",
-    "xo": "^0.30.0"
+    "xo": "^0.32.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
+    "format": "remark . -qfo && prettier . --write && xo --fix",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
     "test": "npm run format && npm run test-coverage"
@@ -69,6 +69,7 @@
     "prettier": true,
     "esnext": false,
     "rules": {
+      "unicorn/prefer-optional-catch-binding": "off",
       "complexity": "off",
       "no-self-compare": "off",
       "no-lonely-if": "off"
