--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
+    "dtslint": "^3.6.12",
     "nyc": "^15.0.0",
     "prettier": "^2.0.0",
     "rehype-format": "^3.0.0",
@@ -51,7 +52,8 @@
     "format": "remark . -qfo && prettier . --write && xo --fix",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
-    "test": "npm run format && npm run test-coverage"
+    "test-types": "dtslint types",
+    "test": "npm run format && npm run test-coverage && npm run test-types"
   },
   "nyc": {
     "check-coverage": true,
