Update for `micromark` in `remark@13`
* Update to a micromark parser, defer work to
  <https://github.com/micromark/micromark-extension-footnote>,
  <https://github.com/syntax-tree/mdast-util-footnote>
* Change footnote reference to match link references:
  footnote references are only parsed when defined
* Change footnote definitions to match lists:
  footnote definitions can now interrupt block quotes, lists, and
  paragraphs

--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "types/index.d.ts",
     "index.js"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "mdast-util-footnote": "^0.1.0",
+    "micromark-extension-footnote": "^0.3.0"
+  },
   "devDependencies": {
     "dtslint": "^4.0.0",
     "nyc": "^15.0.0",
@@ -38,14 +41,15 @@
     "rehype-format": "^3.0.0",
     "rehype-stringify": "^8.0.0",
     "remark-cli": "^8.0.0",
-    "remark-parse": "^8.0.0",
+    "remark-parse": "^9.0.0-alpha.1",
     "remark-preset-wooorm": "^7.0.0",
     "remark-rehype": "^8.0.0",
-    "remark-stringify": "^8.0.0",
+    "remark-stringify": "^9.0.0-alpha.1",
     "tape": "^5.0.0",
     "to-vfile": "^6.0.0",
     "unified": "^9.0.0",
     "unist-builder": "^2.0.0",
+    "unist-util-remove-position": "^3.0.0",
     "xo": "^0.33.0"
   },
   "scripts": {
