--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "prettier": "^2.0.0",
     "rehype-format": "^3.0.0",
     "rehype-stringify": "^8.0.0",
-    "remark-cli": "^8.0.0",
-    "remark-parse": "^9.0.0-alpha.1",
-    "remark-preset-wooorm": "^7.0.0",
+    "remark-cli": "^9.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-preset-wooorm": "^8.0.0",
     "remark-rehype": "^8.0.0",
-    "remark-stringify": "^9.0.0-alpha.1",
+    "remark-stringify": "^9.0.0",
     "tape": "^5.0.0",
     "to-vfile": "^6.0.0",
     "unified": "^9.0.0",
@@ -53,7 +53,7 @@
     "xo": "^0.33.0"
   },
   "scripts": {
-    "format": "remark . -qfo && prettier . --write && xo --fix",
+    "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test/index.js",
     "test-types": "dtslint types",
